[gd_scene load_steps=13 format=2]

[ext_resource path="res://cenaselecionarpista.gd" type="Script" id=1]
[ext_resource path="res://Sons/selecao_pista.wav" type="AudioStream" id=2]
[ext_resource path="res://Pistas/switchback27.png" type="Texture" id=3]
[ext_resource path="res://Imagens/20150328-IMG_1273_1500.jpg" type="Texture" id=4]
[ext_resource path="res://Fonts/ubuntu/Ubuntu-BoldItalic.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Sons/menu-sfx-select-8-sound-effect-69717408.wav" type="AudioStream" id=6]
[ext_resource path="res://Sons/selecionar_menu.wav" type="AudioStream" id=7]
[ext_resource path="res://Pistas/darkcobra2.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=2]
resource_name = "entradacena"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "saidacena"

[sub_resource type="Animation" id=4]
resource_name = "voltamenu"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Node2D" type="Node2D"]
position = Vector2( -25.1716, 19.4269 )
scale = Vector2( 2.23602, 1.80392 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 444.322, 291.305 )
scale = Vector2( 0.262348, 0.275329 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Button" type="Button" parent="."]
margin_left = 28.3111
margin_top = 531.804
margin_right = 137.311
margin_bottom = 575.804
text = "Voltar ao menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SomAmbiente" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -20.194

[node name="Pista1" type="Button" parent="."]
margin_left = 38.0
margin_top = 157.907
margin_right = 713.0
margin_bottom = 521.907
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pista2" type="Button" parent="."]
margin_left = 490.021
margin_top = 157.907
margin_right = 1175.02
margin_bottom = 521.907
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 39.0
margin_top = 358.0
margin_right = 869.0
margin_bottom = 401.0
custom_fonts/normal_font = SubResource( 1 )
text = "                PISTA 1                                                                       PISTA 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MouseEntrabotao" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.194

[node name="SelecionarMenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -20.959

[node name="Entradacena" type="AnimationPlayer" parent="."]
autoplay = "entradacena"
anims/entradacena = SubResource( 2 )
anims/saidacena = SubResource( 3 )

[node name="saircena" type="AnimationPlayer" parent="."]
anims/voltamenu = SubResource( 4 )
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="Button" to="." method="voltar_menu"]
[connection signal="mouse_entered" from="Pista1" to="." method="_on_Pista1_mouse_entered"]
[connection signal="pressed" from="Pista1" to="." method="selec_pista1"]
[connection signal="mouse_entered" from="Pista2" to="." method="_on_Pista2_mouse_entered"]
[connection signal="pressed" from="Pista2" to="." method="selec_pista2"]
[connection signal="animation_finished" from="saircena" to="." method="voltarr_menu"]
